<resources>
    <string name="app_name">Class Attendance Tracker</string>
    <string name="activity_login">Activity Login</string>
    <string name="loginButton">Login</string>
    <string name="student_ID_TextView">Student ID:</string>
    <string name="student_ID_hint">Student ID</string>
    <string name="password_TextView">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="registerButton">Register</string>
    <string name="password_hint">Password</string>
    <string name="editPayloadButton">Edit Payload</string>
    <string name="checkIn">Check-In</string>
    <string name="checkOut">Check-Out</string>

    <string-array name="building_array">
        <item>H</item>
        <item>MB</item>
        <item>EV</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>